--- a/Caronae/Info.plist
+++ b/Caronae/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
+	<string>pt-BR</string>
 	<key>CFBundleDisplayName</key>
 	<string>Caronaê UFRJ</string>
 	<key>CFBundleExecutable</key>
