--- a/.gitignore
+++ b/.gitignore
@@ -52,7 +52,7 @@ Carthage/Build
 fastlane/report.xml
 
 # deliver temporary files
-fastlane/Preview.html
+Preview.html
 
 # snapshot generated screenshots
 fastlane/screenshots
