Atualiza GoogleService-Info.plist e Configura FCM

--- a/Caronae/Supporting Files/GoogleService-Info.plist
+++ b/Caronae/Supporting Files/GoogleService-Info.plist
@@ -2,23 +2,39 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>AD_UNIT_ID_FOR_BANNER_TEST</key>
+	<string>ca-app-pub-3940256099942544/2934735716</string>
+	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
+	<string>ca-app-pub-3940256099942544/4411468910</string>
+	<key>CLIENT_ID</key>
+	<string>1012033032693-bustlbdd9dbfjkes7dpudu07o9opdttp.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.1012033032693-bustlbdd9dbfjkes7dpudu07o9opdttp</string>
+	<key>API_KEY</key>
+	<string>AIzaSyDqsk0-8r2TSHB2yII5gwqAukCr6d9WZuc</string>
 	<key>GCM_SENDER_ID</key>
 	<string>1012033032693</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>br.ufrj.caronae</string>
+	<key>PROJECT_ID</key>
+	<string>caronae-b5965</string>
+	<key>STORAGE_BUCKET</key>
+	<string>caronae-b5965.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false/>
+	<true/>
 	<key>IS_ANALYTICS_ENABLED</key>
 	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<false/>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
 	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<false/>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:1012033032693:ios:45e1b15fa9a65457</string>
+	<key>DATABASE_URL</key>
+	<string>https://caronae-b5965.firebaseio.com</string>
 </dict>
 </plist>
