Usando “configurations” do Xcode para alternar ambiente
Em ‘Edit Scheme’ é possível alterar entre ‘Debug - Development’ e ‘Debug - Production’.

--- a/Caronae/Info.plist
+++ b/Caronae/Info.plist
@@ -6,6 +6,8 @@
 	<string>pt-BR</string>
 	<key>CFBundleDisplayName</key>
 	<string>Caronaê UFRJ</string>
+	<key>CaronaeAPIBaseURL</key>
+	<string>${CARONAE_API_BASE_URL}</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
