--- a/Config/Development.xcconfig
+++ b/Config/Development.xcconfig
@@ -1,3 +1,3 @@
 #include "Common.xcconfig"
 
-CARONAE_API_BASE_URL = ${HTTPS}dev.caronae.tic.ufrj.br
+CARONAE_API_BASE_URL = ${HTTPS}dev.caronae.com.br
