--- a/Caronae/Caronae.entitlements
+++ b/Caronae/Caronae.entitlements
@@ -4,5 +4,11 @@
 <dict>
 	<key>aps-environment</key>
 	<string>development</string>
+	<key>com.apple.developer.associated-domains</key>
+	<array>
+		<string>applinks:caronae.com.br</string>
+		<string>applinks:caronae.ufrj.br</string>
+		<string>applinks:dev.caronae.com.br</string>
+	</array>
 </dict>
 </plist>
