--- a/Caronae/Info.plist
+++ b/Caronae/Info.plist
@@ -25,8 +25,11 @@
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
+			<key>CFBundleURLName</key>
+			<string>br.ufrj.caronae</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
+				<string>caronae</string>
 				<string>fb933455893356973</string>
 			</array>
 		</dict>
