--- a/Settings.bundle/Acknowledgements.plist
+++ b/Settings.bundle/Acknowledgements.plist
@@ -647,7 +647,7 @@ standalone and requires a support library to be linked with it.  This
 support library is itself covered by the above license.
 </string>
 			<key>License</key>
-			<string>New BSD</string>
+			<string>3-Clause BSD License</string>
 			<key>Title</key>
 			<string>Protobuf</string>
 			<key>Type</key>
@@ -1438,6 +1438,36 @@ SOFTWARE.
 			<string>MIT</string>
 			<key>Title</key>
 			<string>UITextView+Placeholder</string>
+			<key>Type</key>
+			<string>PSGroupSpecifier</string>
+		</dict>
+		<dict>
+			<key>FooterText</key>
+			<string>Copyright (c) 2011 Petteri Aimonen &lt;jpa at nanopb.mail.kapsi.fi&gt;
+
+This software is provided 'as-is', without any express or 
+implied warranty. In no event will the authors be held liable 
+for any damages arising from the use of this software.
+
+Permission is granted to anyone to use this software for any 
+purpose, including commercial applications, and to alter it and 
+redistribute it freely, subject to the following restrictions:
+
+1. The origin of this software must not be misrepresented; you 
+   must not claim that you wrote the original software. If you use 
+   this software in a product, an acknowledgment in the product 
+   documentation would be appreciated but is not required.
+
+2. Altered source versions must be plainly marked as such, and 
+   must not be misrepresented as being the original software.
+
+3. This notice may not be removed or altered from any source 
+   distribution.
+</string>
+			<key>License</key>
+			<string>zlib</string>
+			<key>Title</key>
+			<string>nanopb</string>
 			<key>Type</key>
 			<string>PSGroupSpecifier</string>
 		</dict>
