Configura cache do cocoapods do CircleCI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,10 @@ jobs:
           paths:
             - vendor/bundle
       - run:
+          name: Update CocoaPods specs
+          command: |
+            curl https://cocoapods-specs.circleci.com/fetch-cocoapods-repo-from-s3.sh | bash -s cf
+      - run:
           name: Build and publish beta
           command: bundle exec fastlane beta
       - store_artifacts:
