Corrige path do Info.plist de dev e renomeia bundle

--- a/Caronae/Supporting Files/Info-dev.plist
+++ b/Caronae/Supporting Files/Info-dev.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>pt-BR</string>
 	<key>CFBundleDisplayName</key>
-	<string>Caronaê UFRJ</string>
+	<string>Caronaê Dev</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
