--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ jobs:
           command: bundle exec fastlane prepare_build
       - run:
           name: Persist build number
-          command: echo ${CIRCLE_BUILD_NUM} > output/build_number.txt
+          command: echo ${CIRCLE_BUILD_NUM} > build_number.txt
       - save_cache:
           key: 1-pods-{{ checksum "Podfile.lock" }}
           paths:
@@ -83,7 +83,6 @@ jobs:
           paths:
             - gym/Caronae.ipa
             - gym/Caronae.app.dSYM.zip
-            - build_number.txt
 
   deploy-testflight-prod:
     <<: *defaults
@@ -113,7 +112,7 @@ jobs:
           at: output
       - run:
           name: Publish app to App Store
-          command: bundle exec fastlane deploy build_number:"$(cat output/build_number.txt)"
+          command: bundle exec fastlane deploy build_number:"$(cat build_number.txt)"
 
 workflows:
   version: 2
