Deploy da App Store deve vir só depois do deploy pro TestFlight, onde faz upload do build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -141,4 +141,4 @@ workflows:
       - deploy-appstore-prod:
           type: approval
           requires:
-           - build-prod
+           - deploy-testflight-prod
