Corrige gitignore removendo xcscheme

--- a/.gitignore
+++ b/.gitignore
@@ -8,25 +8,24 @@ DerivedData
 !default.mode2v3
 *.perspectivev3
 !default.perspectivev3
-xcuserdata
-*.xccheckout
+xcuserdata/
 *.moved-aside
-*.xcuserstate
+*.xccheckout
 *.xcscmblueprint
-*.xcscheme
 *.hmap
 *.ipa
+*.dSYM.zip
+*.dSYM
 
 vendor/
 .bundle/
+.build/
 Pods/
 Carthage/Build
 fastlane/report.xml
 Preview.html
 fastlane/screenshots
 fastlane/test_output
-**/*.dSYM.zip
-**/*.app
 *.mobileprovision
 output/
 GoogleService-Info.plist
