Renomeia actions do fastlane com nomes descritivos

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ Carthage/Build
 fastlane/report.xml
 Preview.html
 fastlane/screenshots
+screenshots/
 fastlane/test_output
 *.mobileprovision
 output/
