Altera path para screenshots e gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -28,5 +28,7 @@ fastlane/screenshots
 fastlane/test_output
 *.mobileprovision
 output/
+screenshots/*/*.png
+screenshots/screenshots.html
 changelog.txt
 GoogleService-Info.plist
