Corrige informações do Facebook em Info.plist
Agora o login com o Facebook consegue diferenciar o app em produção e
em desenvolvimento.

--- a/Config/Common.xcconfig
+++ b/Config/Common.xcconfig
@@ -1,8 +1,5 @@
-// App settings
+// Facebook settings
 FACEBOOK_APP_ID = 933455893356973
+FACEBOOK_URL_SCHEME = fb${FACEBOOK_APP_ID}
+FACEBOOK_URL_SCHEME_DEV= fb${FACEBOOK_APP_ID}dev
 FACEBOOK_DISPLAY_NAME = Caronae
-
-// Helpers
-SLASH = /
-HTTP = http:${SLASH}${SLASH}
-HTTPS = https:${SLASH}${SLASH}
