--- a/Caronae/Supporting Files/Info-dev.plist
+++ b/Caronae/Supporting Files/Info-dev.plist
@@ -24,11 +24,11 @@
 	<array>
 		<dict>
 			<key>CFBundleURLName</key>
-			<string>br.ufrj.caronae</string>
+			<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>caronae</string>
-				<string>fb933455893356973</string>
+				<string>$(FACEBOOK_URL_SCHEME_DEV)</string>
 			</array>
 		</dict>
 	</array>
@@ -38,6 +38,8 @@
 	<string>$(FACEBOOK_APP_ID)</string>
 	<key>FacebookDisplayName</key>
 	<string>$(FACEBOOK_DISPLAY_NAME)</string>
+	<key>FacebookUrlSchemeSuffix</key>
+	<string>dev</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
 	<key>LSApplicationQueriesSchemes</key>
