--- a/Caronae/Supporting Files/Info.plist
+++ b/Caronae/Supporting Files/Info.plist
@@ -24,11 +24,11 @@
 	<array>
 		<dict>
 			<key>CFBundleURLName</key>
-			<string>br.ufrj.caronae</string>
+			<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>caronae</string>
-				<string>fb933455893356973</string>
+				<string>$(FACEBOOK_URL_SCHEME)</string>
 			</array>
 		</dict>
 	</array>
