Adiciona lógica do encrypt/decrypt keys pros dois targets

--- a/fastlane/.env
+++ b/fastlane/.env
@@ -1,2 +1,3 @@
 FASTLANE_APP_IDENTIFIER=br.ufrj.caronae
 FASTLANE_XCODE_SCHEME=Caronae
+GOOGLE_KEYS_FILE="../Caronae/Supporting Files/GoogleService-Info-prod.plist"
