--- a/fastlane/.env.dev
+++ b/fastlane/.env.dev
@@ -1,2 +1,3 @@
 FASTLANE_APP_IDENTIFIER=br.ufrj.caronae-dev
 FASTLANE_XCODE_SCHEME=Caronae Dev
+GOOGLE_KEYS_FILE="../Caronae/Supporting Files/GoogleService-Info-dev.plist"
