--- a/Caronae/Supporting Files/Info-dev.plist
+++ b/Caronae/Supporting Files/Info-dev.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Isso permite que você selecione uma foto da sua biblioteca.</string>
+	<string>Isto permite que você selecione uma foto da sua biblioteca.</string>
 	<key>NSCameraUsageDescription</key>
-	<string>Isso permite que você tire uma foto para usar como perfil.</string>
+	<string>Isto permite que você tire uma foto para usar como perfil.</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>pt-BR</string>
 	<key>CFBundleDisplayName</key>
